<resources>
    <string name="app_name">lukoil</string>
    <string name="nameGeneralForm">Главная</string>
    <string name="pipes">Трубопровод</string>
    <string name="pumps">Насосы</string>
    <string name="docs">Предписания</string>
    <string name="issuedTo">Выдано: </string>
    <string name="inWork">В работе</string>
    <string name="text">Текст</string>
    <string name="date">Дата</string>
    <string name="updateDirs">Обновить справочники</string>
    <string name="help">Помощь</string>
    <string name="about">О программе</string>
    <string name="time">time</string>
    <string name="name_act">название акта</string>
    <string name="object_name">Объект</string>
    <string name="nh1">НШ №1</string>
    <string name="nh2">НШ №2</string>
    <string name="nh3">НШ №3</string>
    <string name="cppn">ЦППН</string>
    <string name="cppd">ЦППД</string>
    <string name="today">Сегодня</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="all">Все</string>
    <string name="ready">Готово</string>
    <string name="type_event">Тип события</string>
    <string name="date_and_time">Дата и время</string>
    <string name="x">X</string>
    <string name="delete">удалить</string>
    <string name="undo_and_exit">Отменить и выйти</string>
    <string name="structural_department">Структурное подразделение:</string>
    <string name="object">Объект:</string>
    <string name="FIO">ФИО</string>
    <string name="whoGive">Кто выдал:</string>
    <string name="listEvents">Список событий</string>
    <string name="changeList">Изменить список</string>
    <string name="remarks">Замечания:</string>
    <string name="listRemarks">Список замечаний</string>
    <string name="listWorks">Список мероприятий</string>
    <string name="status">Статус:</string>
    <string name="newPhoto">Прикрепить фото</string>
    <string name="loadPhoto">Загрузить ранее прикрепленные фото</string>
    <string name="saveAndExit">Сохранить и выйти</string>
    <string name="whoGet">Кому выдано:</string>
    <string name="edit">Редактировать</string>
    <string name="exit">Назад</string>
    <string name="location">Месторасположение:</string>
    <string name="mark">Марка:</string>
    <string name="reasonStop">Причина остановки:</string>
    <string name="listWorksReady">Выполненные работы:</string>
    <string name="listNotes">Примечаниe:</string>
    <string name="naming">Наименование:</string>
    <string name="mm">мм</string>
    <string name="inHoursForPipe">В часах по трубе</string>
    <string name="mSquard">м²</string>
    <string name="spillArea">Площадь разлива:</string>
    <string name="liquidInPipe">Перекач. среда:</string>
    <string name="responsible">Ответственный:</string>
    <string name="placeLeak">Место утечки:</string>
    <string name="leakParameter">Параметр утечки:</string>
    <string name="leakType">Характер утечки:</string>
    <string name="piketash">Пикетаж:</string>
    <string name="typeCoating">Внутреннее покрытие:</string>
    <string name="wallThickness">Толщина стенки:</string>
    <string name="diameter">Диаметр:</string>
    <string name="general">Главная</string>
    <string name="actsPipe">Акты - трубопровод</string>
    <string name="actsPump">Акты - насосы</string>
    <string name="docsList">Список предписаний</string>
    <string name="changeAct">Изменение акта</string>
    <string name="createAct">Создание акта</string>
    <string name="viewAct">Просмотр акта</string>
    <string name="changeDoc">Изменение предписания</string>
    <string name="createDoc">Создание предписания</string>
    <string name="viewDoc">Просмотр предписания</string>
    <string name="selectTypeEvent">Выберите тип события</string>
    <string name="name2">Название</string>
    <string name="description">Описание</string>
    <string name="ok">OK</string>
    <string name="Cancel">Отмена</string>
    <string name="youSureDeleteThisEvent">Вы точно хотите удалить событие?</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>


</resources>