<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutObjects"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/buttonNH1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nh1"
            android:layout_margin="3sp"
            android:padding="6sp"
            android:textColor="@color/black"
            android:background="@drawable/custom_button_1"
            android:textSize="@dimen/filter_text_size"
            app:cornerRadius="30sp"
            android:onClick="toNH1"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/buttonNH2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nh2"
            android:layout_margin="3sp"
            android:padding="6sp"
            android:textColor="@color/black"
            android:background="@drawable/custom_button_1"
            android:textSize="@dimen/filter_text_size"
            app:cornerRadius="30sp"
            android:onClick="toNH2"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/buttonNH3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nh3"
            android:layout_margin="3sp"
            android:padding="6sp"
            android:textColor="@color/black"
            android:background="@drawable/custom_button_1"
            android:textSize="@dimen/filter_text_size"
            app:cornerRadius="30sp"
            android:onClick="toNH3"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/buttonCPPN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cppn"
            android:layout_margin="3sp"
            android:padding="6sp"
            android:textColor="@color/black"
            android:background="@drawable/custom_button_1"
            android:textSize="@dimen/filter_text_size"
            app:cornerRadius="30sp"
            android:onClick="toCPPN"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/buttonCPPD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cppd"
            android:layout_margin="3sp"
            android:padding="6sp"
            android:textColor="@color/black"
            android:background="@drawable/custom_button_1"
            android:textSize="@dimen/filter_text_size"
            app:cornerRadius="30sp"
            android:onClick="toCPPD"
            android:layout_weight="1"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>