<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/custom_upp"
            android:visibility="visible">
        </include>

        <ScrollView
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonExit"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/undo_and_exit"
                android:layout_gravity="center"
                android:padding="10sp"
                android:layout_margin="5sp"
                android:textColor="@color/black"
                android:background="@drawable/red_frame"
                android:textSize="@dimen/text_button_size"
                app:cornerRadius="30dp"
                android:onClick="toExit"
                android:layout_weight="1"/>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:padding="4sp"
                    tools:ignore="ExtraText">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/naming"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <Spinner
                        android:id="@+id/spinnerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:textSize="@dimen/text_name_parameter_size"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/diameter"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <EditText
                        android:id="@+id/diameter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/editText_name_parameter_size"
                        android:hint="@string/mm"
                        android:autofillHints=""
                        android:inputType="text"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wallThickness"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <EditText
                        android:id="@+id/wall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/editText_name_parameter_size"
                        android:hint="@string/mm"
                        android:autofillHints=""
                        android:inputType="text" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:text="@string/typeCoating"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <Spinner
                        android:id="@+id/spinnerCoating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textSize="@dimen/text_name_parameter_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/piketash"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <EditText
                        android:id="@+id/piketach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/editText_name_parameter_size"
                        android:autofillHints=""
                        android:inputType="text" />

                    <TextView
                        android:id="@+id/events"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="3"
                        android:layout_gravity="fill"
                        android:textColor="@color/text"
                        android:gravity="top|center"
                        android:layout_marginBottom="8sp"
                        android:textSize="@dimen/text_button_size"
                        android:text="@string/listEvents" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutEvents"
                        android:layout_columnSpan="3"
                        android:orientation="vertical">
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:id="@+id/buttonNewEvent"
                        android:layout_height="wrap_content"
                        android:text="@string/changeList"
                        android:layout_margin="4sp"
                        android:padding="10sp"
                        android:textColor="@color/black"
                        android:background="@drawable/block_time_status_act_frame"
                        android:textSize="@dimen/text_button_size"
                        app:cornerRadius="30dp"
                        android:layout_marginBottom="15sp"
                        android:onClick="toEventChange"
                        android:layout_column="0"
                        android:layout_columnSpan="3"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leakType"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size" />

                    <Spinner
                        android:id="@+id/spinner_leak_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textSize="@dimen/text_button_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leakParameter"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <EditText
                        android:id="@+id/leak_parameter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/editText_name_parameter_size"
                        android:hint="@string/mm"
                        android:autofillHints=""
                        android:inputType="text" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeLeak"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <EditText
                        android:id="@+id/leak_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/editText_name_parameter_size"
                        android:hint="@string/inHoursForPipe"
                        android:autofillHints=""
                        android:inputType="text" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/responsible"
                        android:layout_column="0"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <Spinner
                        android:id="@+id/spinner_who"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textSize="@dimen/text_button_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/liquidInPipe"
                        android:layout_column="0"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <Spinner
                        android:id="@+id/spinner_subst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textSize="@dimen/text_button_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spillArea"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <EditText
                        android:id="@+id/area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textColor="@color/text"
                        android:textSize="@dimen/editText_name_parameter_size"
                        android:hint="@string/mSquard"
                        android:autofillHints=""
                        android:inputType="text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/text"
                        android:textSize="@dimen/text_name_parameter_size"  />

                    <Spinner
                        android:id="@+id/spinner_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="2"
                        android:layout_gravity="fill"
                        android:layout_marginBottom="8sp"
                        android:textSize="@dimen/text_button_size" />
                </GridLayout>

                <LinearLayout
                    android:layout_margin="5sp"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/buttonNewPhoto"
                        android:padding="10sp"
                        android:text="@string/newPhoto"
                        android:textColor="@color/black"
                        android:background="@drawable/block_time_status_act_frame"
                        android:textSize="@dimen/text_button_size"
                        app:cornerRadius="30dp"
                        android:onClick="toNewPhoto"
                        android:layout_weight="1"
                        android:layout_marginBottom="8sp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10sp"
                        android:id="@+id/buttonLoadPhoto"
                        android:text="@string/loadPhoto"
                        android:layout_gravity="right"
                        android:textColor="@color/black"
                        android:background="@drawable/block_time_status_act_frame"
                        android:textSize="@dimen/text_button_size"
                        app:cornerRadius="30dp"
                        android:onClick="toLoadPhoto"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded"
                        android:layout_marginBottom="8sp"/>

                    <HorizontalScrollView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent">

                        <LinearLayout
                            android:id="@id/layoutPhoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="5sp"
                            android:layout_gravity="right"
                            tools:ignore="RtlHardcoded">

                        </LinearLayout>
                    </HorizontalScrollView>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10sp"
                        android:id="@+id/buttonSave"
                        android:text="@string/saveAndExit"
                        android:layout_gravity="right"
                        android:textColor="@color/black"
                        android:background="@drawable/red_frame"
                        android:textSize="@dimen/text_button_size"
                        app:cornerRadius="30dp"
                        android:layout_weight="1"
                        tools:ignore="RtlHardcoded" />



                </LinearLayout>



                <include
                    layout="@layout/custom_bottom"
                    android:id="@+id/inv1"
                    android:visibility="invisible">
                </include>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:focusable="true">

        <include
            layout="@layout/custom_bottom"
            android:visibility="visible">
        </include>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bottom"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="-3dp"
        android:background="@drawable/upp_frame"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <include
            layout="@layout/custom_block_menu"
            android:visibility="visible">
        </include>
    </LinearLayout>
</RelativeLayout>